prometheus/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: 1.0.0
  creationTimestamp: null
  labels:
    io.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        version: 1.0.0
      creationTimestamp: null
      labels:
        io.service: prometheus
    spec:
      containers:
        - args:
            - --config.file=/etc/prometheus/config/prometheus.yml
            - --web.external-url=https://cbprometheus.<domain>
            - --storage.tsdb.retention=8d
            - --web.enable-lifecycle
            - --web.enable-admin-api
            - --storage.tsdb.path=/etc/prometheus/data/
          image: prom/prometheus
          name: prometheus
          ports:
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - name: prometheus-azure
              mountPath: /etc/prometheus/data/
            - name: prometheus-yml
              mountPath: /etc/prometheus/config
            - name: prometheus-alerts
              mountPath: /etc/prometheus/alerts
            - name: prometheus-windows-targets
              mountPath: /etc/prometheus/windows
            - name: prometheus-linux-targets
              mountPath: /etc/prometheus/linux
            - name: prometheus-probes
              mountPath: /etc/prometheus/probes
      hostname: prometheus
      restartPolicy: Always

      volumes:
      - name: prometheus-azure
        azureFile:
          secretName: azure-storage-secret
          shareName: prometheus
          readOnly: false
      - name: prometheus-yml
        configMap:
          name: prometheus-yml
          items:
          - key: prometheus.yml
            path: prometheus.yml
      - name: prometheus-alerts
        configMap:
          name: prometheus-alerts
          items:
          - key: alert.rules
            path: alert.rules
      - name: prometheus-windows-targets
        configMap:
          name: prometheus-windows-targets
          items:
          - key: prometheus_windows.yml
            path: prometheus_windows.yml
      - name: prometheus-linux-targets
        configMap:
          name: prometheus-linux-targets
          items:
          - key: prometheus_linux_west_india.yml
            path: prometheus_linux_west_india.yml
      - name: prometheus-probes
        configMap:
          name: prometheus-probes
          items:
          - key: probes.json
            path: probes.json
