prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: 1.0.0
  labels:
    io.service: prometheus
  name: prometheus
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.service: prometheus
status:
  loadBalancer: {}
